Updated enhanced adherence added session start date, updated due for viral load and pending vl inline with lab order model

--- a/omod/src/main/webapp/resources/htmlforms/hiv/enhancedAdherenceScreening.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/enhancedAdherenceScreening.html
@@ -182,13 +182,13 @@
                     <td> Session Number:</td>
                     <td>
                         <obs conceptId="1639AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-                        id="session-number"/>
+                        id="session-number" required="true"/>
                         <span class="value"><recentObs conceptId="1639AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
                     </td>
                     <td> Date of first session:</td>
                     <td>
                         <obs conceptId="164891AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-                        id="session-startdate"
+                        id="session-startdate" required="true"
                         />
                     </td>
                     <td>   &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;  Pill count adherence % (from pill count):</td>
