Updated hei_register_template for dates and hei number

--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPostnatalVisit.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPostnatalVisit.html
@@ -165,7 +165,7 @@
 
        //Maternal history prepopulation
         if(DATE_OF_DELIVERY !=""){
-            var deliveryDateFormatted = moment(DATE_OF_DELIVERY, 'DD-MMM-YYYY').format('YYYY-MM-DD');
+            var deliveryDateFormatted = moment(DATE_OF_DELIVERY, 'DD/MMM/YYYY').format('DD-MMM-YYYY');
             getField('delivery-date.value').val(deliveryDateFormatted);
         }else{
             getField('delivery-date.value').val("");
