--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivEnrollment.html
@@ -150,6 +150,7 @@
             var transferStatus = getValue('transfer-in-status.value');
             var firstEnrolledDate = getValue('first-enrolled-date.value');
             var artStartDate = getValue('art-start-date.value');
+            var tsTelephone = getValue('ts-telephone.value');
             var upn = jq('#hiv-id input[type=text]').val();
 
             if (PATIENT_HAS_UPN) {
@@ -208,6 +209,13 @@
                 getField('encounter-date.error').html('Enrollment date should not be empty').show();
                 return false;
             }
+
+            var phoneno = /^\(?([0-9]{3})\)?[-. ]?([0-9]{3})[-. ]?([0-9]{4})$/;
+            if(!tsTelephone.match(phoneno)) {
+                getField('ts-telephone.error').html('Phone number should contain only digits').show();
+                return false;
+            }
+
             return true;
         });
         //Ckeckbox to prepopulate default location
@@ -261,6 +269,15 @@
                 jq('#baseline-assessment2').show();
                 jq('#baseline-assessment3').show();
                 jq('#treatment-supporter').show();
+
+                jq('#cd4-count :input').prop('disabled', true);
+                jq('#cd4-date :input').prop('disabled', true);
+                jq('#vl :input').prop('disabled', true);
+                jq('#vl-date :input').prop('disabled', true);
+                jq('#ldl :input').prop('disabled', true);
+                jq('#ldl-date :input').prop('disabled', true);
+                jq('#patient-regimen select').prop('disabled', true);
+
                 //jq('#generate-hiv-id').show(); Deactivate generate upn
                 jq('#transit-patient').hide();
                 //Gender based validations  pregnancy and breastfeeding
@@ -295,6 +312,15 @@
                 jq('#baseline-assessment2').show();
                 jq('#baseline-assessment3').show();
                 jq('#treatment-supporter').show();
+
+                jq('#cd4-count :input').prop('disabled', false);
+                jq('#cd4-date :input').prop('disabled', false);
+                jq('#vl :input').prop('disabled', false);
+                jq('#vl-date :input').prop('disabled', false);
+                jq('#ldl :input').prop('disabled', false);
+                jq('#ldl-date :input').prop('disabled', false);
+                jq('#patient-regimen select').prop('disabled', false);
+
                 jq('#transit-patient').hide();
                 //Gender based validations  pregnancy, breastfeeding bmi and muac
                 if (pgender == 'M') {
@@ -965,7 +991,7 @@
 												answerLabels="Grandparent,Sibling,Guardian,Parent,Spouse,Partner,Other"
 										/>
 									</td>
-									<td><obs conceptId="160642AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></td>
+									<td><obs conceptId="160642AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="ts-telephone"/></td>
 									<td><obs conceptId="160641AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></td>
 								</tr>
 							</obsgroup>
