--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsDelivery.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsDelivery.html
@@ -34,6 +34,7 @@
 <script type="text/javascript">
         var PATIENT_IS_ENROLLED_HIV = <lookup expression="kenyaemr.hasHivUniquePatientNumber()" />;
         var PATIENT_IS_REPORTED_HIV = "<lookup expression="fn.latestObs(159427).getValueCoded()"/>";
+        var BABY_PROPHYLAXIS = "<lookup expression="fn.latestObs(1282).getValueCoded()"/>";
         //var HAART_START_DATE = "<lookup expression="fn.latestObs(163784).getValueDatetime()"/>";
         var GREENCARD_VELOCITY = "<lookup expression="kenyaemr.GreenCardVelocityCalculation()" />";
         var PATIENT_ON_ART = GREENCARD_VELOCITY.split(",")[2].split(":")[1];
@@ -174,7 +175,17 @@
                 jq("#expiry-date2 input").prop("disabled", false);
                 getField('hiv-final-result.value').val(1138);
             }
-
+        //Baby prophylaxis prepopulation
+            if(BABY_PROPHYLAXIS ==160123){
+                jq("#azt-dispensed input[value=160123]").prop("checked", true);
+            }else{
+                jq("#azt-dispensed input[value=160123]").prop("checked", false);
+            }
+            if(BABY_PROPHYLAXIS ==80586){
+                jq("#nvp-dispensed input[value=80586]").prop("checked", true);
+            }else{
+                jq("#nvp-dispensed input[value=80586]").prop("checked", false);
+            }
         });
     //on ready end
         function complicationsChange() {
@@ -352,6 +363,8 @@
         function validateOtherFields() {
 
             var gestation = getValue('gestation.value');
+            var encounterDate = getValue('encounter-date.value');
+            var tca_date = getValue('returnVisitDate.value');
 
             if (gestation != null) {
                 var gestationValue = parseFloat(gestation);
@@ -359,6 +372,18 @@
                     getField('gestation.error').html('Gestation must be between 20 and 43 weeks.').show();
                     return false;
                 }
+            }
+            if (tca_date == "") {
+                getField('returnVisitDate.error').html('Please specify return visit date for client.').show();
+                return false;
+            }else{
+                getField('returnVisitDate.error').html('Please specify return visit date for client.').hide();
+            }
+            if (tca_date &lt; encounterDate ) {
+                getField('returnVisitDate.error').html('Return visit date should not be earlier than encounter date.').show();
+                return false;
+            }else{
+                getField('returnVisitDate.error').html('Return visit date should not be earlier than encounter date.').hide();
             }
             return true;
         }
@@ -921,7 +946,8 @@
 									<obs id="partner-tested" conceptId="161557AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 										 answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 										 answerLabels="Yes,No"/>
-									&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
+									<span class="value"><recentObs conceptId="1436AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
+									&#160;&#160;&#160;&#160;&#160;
 								Partner HIV Status:
 									&#160;&#160;&#160;&#160;&#160;&#160;&#160;
 									<obs conceptId="1436AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
