--- a/omod/src/main/webapp/resources/htmlforms/hts/referralAndLinkage.html
+++ b/omod/src/main/webapp/resources/htmlforms/hts/referralAndLinkage.html
@@ -103,7 +103,21 @@
     </div>
 
     <div class="ke-form-content">
+        <fieldset>
+            <legend>Patient Referral</legend>
 
+            <table id="patient-referral" style="display: inline-block">
+                <tr>
+                    <td><strong>Facility referred to: </strong>
+                        <obs id="facility-to-be-referred-to" conceptId="161550AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="text" />
+                    </td>
+                    <td><strong>Date to be enrolled : </strong>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
+                        <obs class="to-be-enrolled--date" conceptId="161560AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" showTime="false"
+                        />
+                    </td>
+                </tr>
+            </table>
+        </fieldset>
         <fieldset>
             <legend>Patient Tracing</legend>
 
