Added dual kit in mchms hts tests and hiv hts tests, bug fix on immunization register misplaced mothers and fathers name - MOH510

--- a/omod/src/main/webapp/resources/htmlforms/hts/htsConfirmatoryTest.html
+++ b/omod/src/main/webapp/resources/htmlforms/hts/htsConfirmatoryTest.html
@@ -729,8 +729,8 @@
                             <obs class="kit-name"
                                  id="kit-name-1"
                                  conceptId="164962"
-                                 answerConceptIds="164960,164961"
-                                 style="dropdown" answerLabels="Determine,First Response"
+                                 answerConceptIds="164960,164961,165351"
+                                 style="dropdown" answerLabels="Determine,First Response,Dual Kit"
                             />
 
                         </td>
@@ -760,8 +760,8 @@
                             <obs class="kit-name2"
                                  id="kit-name-2"
                                  conceptId="164962"
-                                 answerConceptIds="164960,164961"
-                                 style="dropdown" answerLabels="Determine,First Response"
+                                 answerConceptIds="164960,164961,165351"
+                                 style="dropdown" answerLabels="Determine,First Response,Dual Kit"
                             />
 
                         </td>
