--- a/omod/src/main/webapp/resources/htmlforms/hts/htsInitialTest.html
+++ b/omod/src/main/webapp/resources/htmlforms/hts/htsInitialTest.html
@@ -688,8 +688,8 @@
                             <obs class="kit-name"
                                  id="kit-name-1"
                                  conceptId="164962"
-                                 answerConceptIds="164960,164961"
-                                 style="dropdown" answerLabels="Determine,First Response"
+                                 answerConceptIds="164960,164961,165351"
+                                 style="dropdown" answerLabels="Determine,First Response,Dual Kit"
                             />
 
                         </td>
@@ -719,8 +719,8 @@
                             <obs class="kit-name2"
                                  id="kit-name-2"
                                  conceptId="164962"
-                                 answerConceptIds="164960,164961"
-                                 style="dropdown" answerLabels="Determine,First Response"
+                                 answerConceptIds="164960,164961,165351"
+                                 style="dropdown" answerLabels="Determine,First Response,Dual Kit"
                             />
 
                         </td>
