--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPostnatalVisit.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPostnatalVisit.html
@@ -982,8 +982,8 @@
 											<obs class="kit-name"
 												 id="kit-name-1"
 												 conceptId="164962"
-												 answerConceptIds="164960,164961"
-												 style="dropdown" answerLabels="Determine,First Response"
+												 answerConceptIds="164960,164961,165351"
+												 style="dropdown" answerLabels="Determine,First Response,Dual Kit"
 											/>
 
 										</td>
@@ -1013,8 +1013,8 @@
 											<obs class="kit-name2"
 												 id="kit-name-2"
 												 conceptId="164962"
-												 answerConceptIds="164960,164961"
-												 style="dropdown" answerLabels="Determine,First Response"
+												 answerConceptIds="164960,164961,165351"
+												 style="dropdown" answerLabels="Determine,First Response,Dual Kit"
 											/>
 
 										</td>
